# obsidian-slack-assistant

./: .env.example  .gitignore  LICENSE  README.ko.md  README.md  config.py  main.py  pyproject.toml
handlers/: briefing_handler.py  message_handler.py
models/: task.py
scripts/: cc_work_logger.py
services/: calendar_service.py  claude_service.py  obsidian_service.py  routine_service.py
